# barad-dur

./: .editorconfig  .env  .gitlab-ci.yml  .typos.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.sample.yaml  config.yaml  flake.nix  shell.nix  sqlx-data.json
.github/workflows/: docker.yml  rust.yml
.sqlx/: query-0e3246ccb74d4c4d675ee908b7ab835552cda4a34139dedd4c1b766a24dff641.json  query-1256b22f35cf76db9f57d53a3429519b914a6358e2421fdb082693462eb2158d.json  query-2482d5cbc0d34da4f1dbd9febe1e28f925cd0d2e6778bcb141606dd9fb6220e9.json  query-3d8e9bb49b10e665eaa4d8cddfa7e0c32e1591d6958ffccca5959c20351a88fd.json  query-67dd5c136551fefc219a23f332d7f80609303c1d46f7cfd549820fcf0ed915bf.json  query-8433cecb95400cf075bf813a43c0678495a6851c98ebdce35e968f780cf898a0.json  query-86ddeccb08afd89e87de480a10b9351d4f29c2b182dd11cecd5e50a76920ce44.json  query-95a3290f44f0856ef15c8e113998f20e1553b723fcff8458e24b20eda1a1ff8e.json  query-b874e3c536f920347a0fa8ab918680a3bdf510ca6738b9167192ca7bdffba1c7.json  query-c549acb6a34c0c4e3cc3f32ef6222e0fcef37b4ee3e3df38c69a328baaa94d3b.json  query-f4a1839e714f12a4dc871ed8be4c13c513e1760d573a7aefbd5faa9af0909593.json  query-f61b18a23374be41244bcd2c97879d8d1a9c539521a5fb9e864d81682f100bda.json
migrations/: 20210216162603_baraddur.sql  20210225110229_aggregate_stats.sql  20240421084445_aggregate_by_context.sql  20250715170456_total_messages.sql
misc/panopticon-import/: README.md  import-v0.1.2.sql  import-v0.1.3.sql  import-v0.2.0.sql
scripts/: import-v0.1.2.sql  import-v0.1.3.sql  import-v0.1.5.sql
src/: #server.rs#  #sql.rs#  database.rs  lib.rs  main.rs  model.rs  server.rs  settings.rs  sql.rs
src/tests/: mod.rs  report-v0.33.6.json  report-v0.99.4.json  report-v1.28.0.json  report-v1.78.0.json  report-v1.85.2.json  report-v1.99.0.json
tests/: report-v0.99.2.json
