[package]
name = "barad-dur"
version = "0.1.2"
authors = ["Shekhinah Memmel <she@khinah.xyz>", "Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.1", features = [ "headers", "tokio" ] }
time = { version = "0.3.17", features = [ "serde", "local-offset" ] }
clap = "4.0.29"
config = "0.13.3"
fern = "0.6.1"
http = "0.2.8"
hyper = "0.14.23"
log = "0.4.17"
once_cell = "1.16.0"
serde = { version = "1.0.151", features = [ "derive" ] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "time", "json", "bigdecimal", "offline" ] }
tokio = { version = "1.35.1", features = [ "time", "macros", "rt-multi-thread" ] }

[dev-dependencies]
tower = "0.4.13"
